# sneaky-helper

./: .gitignore  README.md  SneakyBot.py  config.json  main.py  pyproject.toml  requirements.txt  sneaky.py
.github/workflows/: build_wheel.yml
cogs/: recording.py  transcription.py  utils.py
sneaky_helper/: main.py
sneaky_helper/cogs/: recording.py  utils.py
