[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sneaky-helper"
version = "0.1.0"
dependencies = [
    "aiohttp ~= 3.8.6",
    "aiosignal ~= 1.3.1",
    "async-timeout ~= 4.0.3",
    "attrs ~= 23.1.0",
    "av ~= 11.0.0",
    "certifi ~= 2024.2.2",
    "cffi ~= 1.16.0",
    "charset-normalizer ~= 3.3.2",
    "coloredlogs ~= 15.0.1",
    "ctranslate2 ~= 4.1.0",
    "discord ~= 2.3.2",
    "discord.py ~= 2.3.2",
    "faster-whisper ~= 1.0.1",
    "ffmpeg ~= 1.4",
    "ffmpeg-python ~= 0.2.0",
    "ffprobe ~= 0.5",
    "filelock ~= 3.13.1",
    "flatbuffers ~= 24.3.7",
    "frozenlist ~= 1.4.0",
    "fsspec ~= 2024.3.1",
    "future ~= 0.18.3",
    "huggingface-hub ~= 0.21.4",
    "humanfriendly ~= 10.0",
    "idna ~= 3.4",
    "imageio-ffmpeg ~= 0.4.9",
    "mpmath ~= 1.3.0",
    "multidict ~= 6.0.4",
    "numpy ~= 1.26.3",
    "onnxruntime ~= 1.17.1",
    "packaging ~= 24.0",
    "pip ~= 24.0",
    "protobuf ~= 5.26.0",
    "py-cord ~= 2.5.0",
    "pycord ~= 0.1.1",
    "pycparser ~= 2.21",
    "pydub ~= 0.25.1",
    "PyNaCl ~= 1.5.0",
    "python-dotenv ~= 1.0.0",
    "PyYAML ~= 6.0.1",
    "requests ~= 2.31.0",
    "setuptools ~= 68.1.2",
    "sympy ~= 1.12",
    "tokenizers ~= 0.15.2",
    "tqdm ~= 4.66.2",
    "typing_extensions ~= 4.10.0",
    "urllib3 ~= 2.2.1",
    "yarl ~= 1.9.2",
]
requires-python = ">=3.8"
description = "Discord.py bot leveraging Whisper AI for transcription of voice chats"

[project.scripts]
sneaky-helper = "sneaky_helper.main:main"

[project.urls]
changelog = "https://github.com/hayesraven/sneaky-helper/blob/main/CHANGELOG.md"
issues = "https://github.com/hayesraven/sneaky-helper/issues"
repository = "https://github.com/hayesraven/sneaky-helper"

[project.optional-dependencies]
build = ["build >= 1.2"]
test = ["pytest ~= 8.1"]
